# rotary-phone-audio-guestbook

./: .asoundrc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  audioGuestBook.py  audioGuestBook.service  audioGuestBook.service.template  audioGuestBookWebServer.service  audioInterface.py  config.example.yaml  config.yaml  deploy.sh  development.md  install.sh  installer.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  rotaryGuestBook.py  rsync-exclude.txt  start_server.sh
.github/: FUNDING.yml
.github/workflows/: build-image.yml
docs/: .gitignore  README.rst  conf.py  configuration.md  development.md  hardware.md  index.rst  materials.md  module_audioGuestBook.rst  module_audioInterface.rst  software.md
src/: audioGuestBook.py  audioInterface.py  audioProcessing.py
src/todo/: audioGuestBookwithRotaryDialer.py
test/: test_config.yaml  test_server.py
todo/: audioGuestBookwithRotaryDialer.py
tools/: build-local.sh  check-image.sh
webserver/: package-lock.json  package.json  postcss.config.js  server.py  tailwind.config.js
webserver/static/css/: output.css  output.min.css  tailwind.css
webserver/static/js/: menu.js  recordings.js  theme.js
webserver/templates/: base.html  config.html  edit_config.html  index.html
